--- a/app/src/main/res/layout/item_appointment.xml
+++ b/app/src/main/res/layout/item_appointment.xml
@@ -1,71 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/_5sdp"
-    android:background="@drawable/bg_light_grray_10dp"
-    android:padding="@dimen/_5sdp">
+    android:layout_margin="@dimen/_3sdp">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/view_background"
+        android:layout_width="@dimen/_80sdp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:background="@drawable/bg_dialog"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_centerInParent="true"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_delete" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/delete_icon"
+            android:layout_centerHorizontal="true"
+            android:text="@string/delete"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_8sdp" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/view_foreground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_toStartOf="@+id/llSwitch"
-        android:orientation="vertical">
+        android:background="@drawable/bg_light_grray_10dp"
+        android:padding="@dimen/_5sdp">
 
-        <TextView
-            android:id="@+id/tvName"
-            style="@style/TextRegularFont"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_bold"
-            android:lines="1"
-            android:text="Canine Parvovirus"
-            android:textColor="@color/theme_Color" />
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_toStartOf="@+id/llSwitch"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvDesc"
-            style="@style/TextRegularFont"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_bold"
-            android:lines="1"
-            android:text="Dog-Rocky At 10 am" />
+            <TextView
+                android:id="@+id/tvName"
+                style="@style/TextRegularFont"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_bold"
+                android:lines="1"
+                android:text="Canine Parvovirus"
+                android:textColor="@color/theme_Color" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tvDesc"
+                style="@style/TextRegularFont"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_bold"
+                android:lines="1"
+                android:text="Dog-Rocky At 10 am" />
 
-    <LinearLayout
-        android:id="@+id/llSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:orientation="vertical">
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvMonth"
-            style="@style/TextRegularFont"
+        <LinearLayout
+            android:id="@+id/llSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/remainder"
-            android:textSize="@dimen/_9sdp" />
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tvMonth"
+                style="@style/TextRegularFont"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/remainder"
+                android:textSize="@dimen/_9sdp" />
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/swReminder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:checked="true"
-            android:thumb="@drawable/notification_thumb_selector"
-            app:track="@drawable/notification_track_selector" />
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/swReminder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:checked="true"
+                android:thumb="@drawable/notification_thumb_selector"
+                app:track="@drawable/notification_track_selector" />
 
+        </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</RelativeLayout>
+</FrameLayout>
