--- a/app/src/main/res/layout/activity_add_health_problem.xml
+++ b/app/src/main/res/layout/activity_add_health_problem.xml
@@ -10,4 +10,15 @@
         android:id="@+id/tb"
         layout="@layout/auth_toolbar" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvHealthList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/_1sdp"
+        app:layout_constraintTop_toBottomOf="@id/tb"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
