--- a/app/src/main/res/layout/item_health_details.xml
+++ b/app/src/main/res/layout/item_health_details.xml
@@ -28,21 +28,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <androidx.viewpager.widget.ViewPager
-                        android:id="@+id/rv_addRecord"
+                    <ImageView
+                        android:id="@+id/img"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_160sdp"
                         android:orientation="horizontal"
-                       />
+                        />
 
-                    <info.jeovani.viewpagerindicator.ViewPagerIndicator
-                        android:id="@+id/viewPagerIndicator"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_35sdp"
-                        android:layout_alignBottom="@id/rv_addRecord"
-                        android:layout_centerHorizontal="true"
-                        app:vpi_item_type="oval"
-                        app:vpi_view_pager="@+id/rv_addRecord" />
 
                     <ImageView
                         android:id="@+id/iv_record"
