--- a/app/src/main/res/layout/activity_my_pet_profile.xml
+++ b/app/src/main/res/layout/activity_my_pet_profile.xml
@@ -10,170 +10,60 @@
     <include
         android:id="@+id/tb"
         layout="@layout/auth_toolbar" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
+        android:id="@+id/llTopBtn"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_below="@+id/tb"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:background="@drawable/bg_light_grray_10dp"
+        android:orientation="horizontal"
+        android:weightSum="3">
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnProfile"
+        style="@style/ButtonMatch"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@drawable/bg_sky_blue_10dp"
+        android:text="@string/profile" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnPicture"
+        style="@style/ButtonMatch"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@android:color/transparent"
+        android:text="@string/picture"
+        android:textColor="@color/black" />
+     <androidx.appcompat.widget.AppCompatButton
+         android:id="@+id/btnLifeEvent"
+         style="@style/ButtonMatch"
+         android:layout_width="0dp"
+         android:layout_height="match_parent"
+         android:layout_weight="1"
+         android:background="@android:color/transparent"
+         android:text="@string/lifeEvent"
+         android:textColor="@color/black" />
+ </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlWeightContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:ignore="MissingClass">
+        android:layout_below="@+id/llTopBtn"
+        android:layout_marginTop="@dimen/_10sdp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:orientation="vertical">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/ivImg"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_150sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:scaleType="fitXY"
-                android:src="@drawable/dog_img"
-                app:riv_corner_radius="@dimen/_5sdp" />
-
-            <TextView
-                style="@style/WrapTextView"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="@string/pet_detail" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp">
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_alignParentStart="true"
-                    android:text="@string/name"
-                    android:textColor="@color/theme_Color" />
-
-                <TextView
-                    android:id="@+id/tvName"
-                    style="@style/WrapTextView"
-                    android:layout_alignParentEnd="true" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp">
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_alignParentStart="true"
-                    android:text="@string/gender"
-                    android:textColor="@color/theme_Color" />
-
-                <TextView
-                    android:id="@+id/tvGender"
-                    style="@style/WrapTextView"
-                    android:layout_alignParentEnd="true" />
-
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginTop="@dimen/_10sdp">
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_alignParentStart="true"
-                    android:text="@string/weight"
-                    android:textColor="@color/theme_Color" />
-
-                <TextView
-                    android:id="@+id/tvWeight"
-                    style="@style/WrapTextView"
-                    android:layout_alignParentEnd="true"
-                    android:text="@string/_120_lbs" />
-
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp">
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_alignParentStart="true"
-                    android:text="@string/age"
-                    android:textColor="@color/theme_Color" />
-
-                <TextView
-                    android:id="@+id/tvAge"
-                    style="@style/WrapTextView"
-                    android:layout_alignParentEnd="true" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp">
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_alignParentStart="true"
-                    android:text="@string/breed"
-                    android:textColor="@color/theme_Color" />
-
-                <TextView
-                    android:id="@+id/tvBreed"
-                    style="@style/WrapTextView"
-                    android:layout_alignParentEnd="true" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp">
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_alignParentStart="true"
-                    android:text="@string/about_pet"
-                    android:textColor="@color/theme_Color" />
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/tvAbout"
-                android:layout_width="match_parent"
-                android:fontFamily="@font/opensans_regular"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/bg_edit_text_10dp"
-                android:textColor="@color/black"
-                android:maxHeight="@dimen/_100sdp"
-                android:minHeight="@dimen/_100sdp"
-                android:padding="@dimen/_10sdp"
-                android:textSize="@dimen/_10sdp" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/BtnEdit"
-                style="@style/ButtonMatch"
-                android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/bg_sky_blue_10dp"
-                android:contentDescription="@string/image"
-                android:text="@string/edit_pet_profile" />
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
