--- a/app/src/main/res/layout/activity_add_health_problem.xml
+++ b/app/src/main/res/layout/activity_add_health_problem.xml
@@ -20,5 +20,18 @@
         app:layout_constraintTop_toBottomOf="@id/tb"
         android:layout_marginHorizontal="@dimen/_10sdp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
+    <TextView
+        android:id="@+id/no_data"
+        style="@style/WrapTextView"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/dp20"
+        android:fontFamily="@font/opensans_regular"
+        android:text="No data found"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_14sdp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
