--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -26,9 +26,9 @@
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_100sdp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_60sdp"
+                    android:layout_marginTop="@dimen/_40sdp"
                     android:contentDescription="@string/image"
-                    android:src="@drawable/logo" />
+                    android:src="@drawable/puppypediamain" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
