--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,8 +21,12 @@
             android:layout_height="@dimen/_100sdp"
             android:layout_gravity="center"
             android:contentDescription="@string/image"
-            android:src="@drawable/logo" />
-
+            android:src="@drawable/puppypediamain" />
+        <TextView
+            style="@style/WrapTextView"
+            android:text="@string/app_name"
+            android:layout_gravity="center"
+            android:textSize="@dimen/_14sdp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
