--- a/app/src/main/res/drawable/ic_fab_btn.xml
+++ b/app/src/main/res/drawable/ic_fab_btn.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="#FFFFFF"
+    android:width="54dp"
+    android:height="54dp"
+    android:tint="#37c1f8"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
