--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -24,9 +24,10 @@
         android:text="@string/v_n_cristhon"
         android:textSize="@dimen/_12sdp"
         android:textColor="@color/black"
-        android:layout_marginEnd="@dimen/_30sdp"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivSplash"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/ivSplash"
         android:fontFamily="@font/opensans_semibold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
