--- a/app/src/main/res/layout/dialog_add_new_pet.xml
+++ b/app/src/main/res/layout/dialog_add_new_pet.xml
@@ -9,11 +9,11 @@
     android:paddingBottom="@dimen/_20sdp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_100sdp"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:src="@drawable/logo" />
+        android:layout_marginTop="@dimen/_40sdp"
+        android:src="@drawable/puppypediamain" />
 
     <TextView
         android:id="@+id/tvTitle"
