--- a/app/src/main/res/layout/item_addlifepic.xml
+++ b/app/src/main/res/layout/item_addlifepic.xml
@@ -12,7 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/image"
-        android:src="@drawable/ic_add" />
+        android:src="@drawable/plusbg" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivDogImg"
