--- a/app/src/main/res/layout/activity_edit_pet_profile.xml
+++ b/app/src/main/res/layout/activity_edit_pet_profile.xml
@@ -48,6 +48,26 @@
                 android:paddingEnd="@dimen/_10sdp"
                 />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_marginEnd="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/bg_edit_text">
+
+                <Spinner
+                    android:id="@+id/spinnerType"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null" />
+                <ImageView
+                    android:layout_width="@dimen/_8sdp"
+                    android:layout_height="@dimen/_8sdp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:src="@drawable/downaero" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
