--- a/app/src/main/res/layout/item_your_dogs.xml
+++ b/app/src/main/res/layout/item_your_dogs.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:padding="@dimen/_4sdp"
+    android:layout_height="wrap_content" >
+
+<LinearLayout
+    android:id="@+id/dogsLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    app:layout_constraintTop_toTopOf="parent"
     android:layout_marginBottom="@dimen/_8sdp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -30,3 +38,14 @@
         android:contentDescription="@string/image"
         android:src="@drawable/ic_dot_unselect" />
 </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvDogsDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/dogsLinearLayout"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
