--- a/app/src/main/res/layout/item_your_dogs.xml
+++ b/app/src/main/res/layout/item_your_dogs.xml
@@ -48,4 +48,29 @@
         app:layout_constraintTop_toBottomOf="@+id/dogsLinearLayout"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+    <TextView
+        android:id="@+id/tvNoData"
+        style="@style/WrapTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_8sdp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/dogsLinearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:text="@string/image" />
+
+    <TextView
+        android:id="@+id/addPet"
+        style="@style/WrapTextView"
+        android:textSize="@dimen/_8sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
+        android:paddingHorizontal="@dimen/_4sdp"
+       android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/tvNoData"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:text="@string/addpet" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
