--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_150sdp">
@@ -11,37 +11,61 @@
         android:scaleType="fitXY"
         app:riv_corner_radius="@dimen/_5sdp" />
 
-    <LinearLayout
-        android:layout_width="@dimen/_180sdp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:background="@color/light_black"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingEnd="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_5sdp">
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:gravity="bottom"
+       app:layout_constraintTop_toBottomOf="@+id/tvPetName"
+       app:layout_constraintBottom_toBottomOf="parent">
+       <WebView
+           android:id="@+id/webView"
+           android:layout_width="@dimen/_180sdp"
+           android:layout_height="wrap_content"
+           android:background="@color/light_black"
+           android:maxHeight="@dimen/_150sdp"
+           android:orientation="vertical"
+           android:paddingStart="@dimen/_10sdp"
+           android:paddingTop="@dimen/_5sdp"
+           android:paddingEnd="@dimen/_10sdp"
+           android:paddingBottom="@dimen/_5sdp"
+           app:layout_constraintVertical_bias="1.0"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           android:layout_alignParentEnd="true"
+
+           />
+   </RelativeLayout>
+
+
 
         <TextView
             android:id="@+id/tvPetName"
             android:layout_width="wrap_content"
-            android:visibility="gone"
+            android:visibility="visible"
+            android:layout_marginTop="30dp"
+             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_regular"
             android:textColor="@color/white"
             android:textSize="@dimen/_11sdp" />
 
 
-        <TextView
-            android:id="@+id/tvDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_regular"
-            android:ellipsize="end"
-            android:textColor="@color/white"
-            android:lines="5"
-            android:textSize="@dimen/_10sdp" />
-    </LinearLayout>
+<!--        <WebView-->
+<!--            android:id="@+id/webView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            -->
+<!--            android:layout_height="match_parent"/>-->
+<!--        <TextView-->
+<!--            android:id="@+id/tvDescription"-->
+<!--           android:visibility="gone"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:fontFamily="@font/opensans_regular"-->
+<!--            android:ellipsize="end"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:lines="5"-->
+<!--             />-->
+<!--    </WebView>-->
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
